--- a/src/Leaf.Web/Web.config
+++ b/src/Leaf.Web/Web.config
@@ -9,8 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-Leaf.Web-20170301051028.mdf;Initial Catalog=aspnet-Leaf.Web-20170301051028;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
+    <add name="LeafDb" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Leaf;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
