Added _ViewStart in NoitController

--- a/src/Leaf.Web/Leaf.Web.csproj
+++ b/src/Leaf.Web/Leaf.Web.csproj
@@ -255,6 +255,8 @@
     <Content Include="Views\Noit\Index.cshtml" />
     <Content Include="Views\Noit\_NoitLayout.cshtml" />
     <Content Include="Views\Noit\Training.cshtml" />
+    <Content Include="Views\Noit\FullTest.cshtml" />
+    <Content Include="Views\Noit\_ViewStart.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
