Added initial models and enabled migrations

--- a/src/Leaf.Data/Leaf.Data.csproj
+++ b/src/Leaf.Data/Leaf.Data.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Contracts\ILeafDbContext.cs" />
     <Compile Include="Contracts\IRepository.cs" />
     <Compile Include="Contracts\IUnitOfWork.cs" />
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="UnitOfWork.cs" />
     <Compile Include="LeafDbContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
