Added question partial view

--- a/src/Leaf.Web/Leaf.Web.csproj
+++ b/src/Leaf.Web/Leaf.Web.csproj
@@ -205,6 +205,7 @@
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\questionBox.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -262,6 +263,7 @@
     <Content Include="Views\Noit\Training.cshtml" />
     <Content Include="Views\Noit\FullTest.cshtml" />
     <Content Include="Views\Noit\_ViewStart.cshtml" />
+    <Content Include="Views\Noit\_Question.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
