--- a/src/Leaf.Models/Leaf.Models.csproj
+++ b/src/Leaf.Models/Leaf.Models.csproj
@@ -57,8 +57,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Answer.cs" />
+    <Compile Include="AnsweredQuestion.cs" />
     <Compile Include="Category.cs" />
-    <Compile Include="FullTest.cs" />
+    <Compile Include="Test.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Question.cs" />
     <Compile Include="User.cs" />
