Changed models and implemented test creation

--- a/src/Leaf.Services/Leaf.Services.csproj
+++ b/src/Leaf.Services/Leaf.Services.csproj
@@ -53,6 +53,10 @@
       <Project>{04fba009-268d-4ecb-ab5f-3c76b197be9a}</Project>
       <Name>Leaf.Data</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Leaf.Factories\Leaf.Factories.csproj">
+      <Project>{f11987c8-e19a-4502-8535-c0c857dc2b2f}</Project>
+      <Name>Leaf.Factories</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Leaf.Models\Leaf.Models.csproj">
       <Project>{9aa679c4-6bd2-4479-ba4f-1b9c88f8127b}</Project>
       <Name>Leaf.Models</Name>
