--- a/src/Leaf.Web/Leaf.Web.csproj
+++ b/src/Leaf.Web/Leaf.Web.csproj
@@ -277,6 +277,7 @@
     <Content Include="Views\Noit\FullTest.cshtml" />
     <Content Include="Views\Noit\_ViewStart.cshtml" />
     <Content Include="Views\Noit\_Question.cshtml" />
+    <Content Include="Views\Noit\Test.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
