--- a/src/Leaf.Tests/Leaf.Tests.csproj
+++ b/src/Leaf.Tests/Leaf.Tests.csproj
@@ -71,9 +71,10 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="Data\Repository\ConstructorTests.cs" />
-    <Compile Include="Data\Repository\Fakes\FakeRepositoryType.cs" />
-    <Compile Include="Data\Repository\GetByIdTests.cs" />
+    <Compile Include="Data\RepositoryTests\ConstructorTests.cs" />
+    <Compile Include="Data\RepositoryTests\Fakes\FakeRepositoryType.cs" />
+    <Compile Include="Data\RepositoryTests\GetByIdTests.cs" />
+    <Compile Include="Data\UnitOfWorkTests\ConstructorTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
