--- a/src/Leaf.Tests/Leaf.Tests.csproj
+++ b/src/Leaf.Tests/Leaf.Tests.csproj
@@ -71,9 +71,13 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="Data\RepositoryTests\AddTests.cs" />
     <Compile Include="Data\RepositoryTests\ConstructorTests.cs" />
+    <Compile Include="Data\RepositoryTests\DeleteTests.cs" />
     <Compile Include="Data\RepositoryTests\Fakes\FakeRepositoryType.cs" />
+    <Compile Include="Data\RepositoryTests\GetAllTests.cs" />
     <Compile Include="Data\RepositoryTests\GetByIdTests.cs" />
+    <Compile Include="Data\RepositoryTests\UpdateTests.cs" />
     <Compile Include="Data\UnitOfWorkTests\CommitTests.cs" />
     <Compile Include="Data\UnitOfWorkTests\ConstructorTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
