--- a/src/Leaf.Auth/Leaf.Auth.csproj
+++ b/src/Leaf.Auth/Leaf.Auth.csproj
@@ -91,7 +91,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Contracts\IAuthenticationProvider.cs" />
-    <Compile Include="HttpContextAuthenticationProvider.cs" />
+    <Compile Include="AuthenticationProvider.cs" />
     <Compile Include="IdentityMessageServices\EmailService.cs" />
     <Compile Include="IdentityMessageServices\SmsService.cs" />
     <Compile Include="Managers\ApplicationSignInManager.cs" />
