--- a/src/Leaf.Services/Leaf.Services.csproj
+++ b/src/Leaf.Services/Leaf.Services.csproj
@@ -56,7 +56,7 @@
     <Compile Include="Contracts\IFullGameService.cs" />
     <Compile Include="Contracts\IQuestionService.cs" />
     <Compile Include="Contracts\ITestService.cs" />
-    <Compile Include="Noit\FullGameService.cs" />
+    <Compile Include="Noit\FullTestService.cs" />
     <Compile Include="Noit\QuestionService.cs" />
     <Compile Include="Noit\TestService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
