--- a/src/Leaf.Tests/Leaf.Tests.csproj
+++ b/src/Leaf.Tests/Leaf.Tests.csproj
@@ -129,6 +129,7 @@
     <Compile Include="Web\Noit\FullTestControllerTests\IndexTests.cs" />
     <Compile Include="Web\Noit\FullTestControllerTests\ReceiveAnswerTests.cs" />
     <Compile Include="Web\Noit\FullTestControllerTests\StartTestTests.cs" />
+    <Compile Include="Web\Noit\FullTestControllerTests\TestTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
