--- a/src/Leaf.Tests/Leaf.Tests.csproj
+++ b/src/Leaf.Tests/Leaf.Tests.csproj
@@ -140,6 +140,10 @@
       <Project>{5DDF6FC2-6034-4E7A-A34B-1E8C2FC93978}</Project>
       <Name>Leaf.Auth</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Leaf.Commom\Leaf.Commom.csproj">
+      <Project>{19ef76b8-7b35-4164-960c-d6c5b5374f73}</Project>
+      <Name>Leaf.Commom</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Leaf.Data\Leaf.Data.csproj">
       <Project>{04fba009-268d-4ecb-ab5f-3c76b197be9a}</Project>
       <Name>Leaf.Data</Name>
