--- a/src/Leaf.Web/Leaf.Web.csproj
+++ b/src/Leaf.Web/Leaf.Web.csproj
@@ -206,6 +206,8 @@
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Areas\Noit\Controllers\FullTestController.cs" />
     <Compile Include="Areas\Noit\Models\NextQuestionViewModel.cs" />
+    <Compile Include="Areas\Noit\Models\TestDetailsViewModel.cs" />
+    <Compile Include="Areas\Noit\Models\TestViewModel.cs" />
     <Compile Include="Areas\Noit\NoitAreaRegistration.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
