Implemented sending question submissions

--- a/src/Leaf.Factories/Leaf.Factories.csproj
+++ b/src/Leaf.Factories/Leaf.Factories.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ISubmitFactory.cs" />
     <Compile Include="ITestFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
