--- a/src/Leaf.Models/Leaf.Models.csproj
+++ b/src/Leaf.Models/Leaf.Models.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Answer.cs" />
     <Compile Include="AnsweredQuestion.cs" />
     <Compile Include="Category.cs" />
+    <Compile Include="Submission.cs" />
     <Compile Include="Test.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Question.cs" />
