--- a/src/Leaf.Web/Leaf.Web.csproj
+++ b/src/Leaf.Web/Leaf.Web.csproj
@@ -205,7 +205,10 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Areas\Noit\Controllers\FullTestController.cs" />
+    <Compile Include="Areas\Noit\Controllers\ModerationController.cs" />
+    <Compile Include="Areas\Noit\Controllers\SubmitController.cs" />
     <Compile Include="Areas\Noit\Models\NextQuestionViewModel.cs" />
+    <Compile Include="Areas\Noit\Models\SubmissionViewModel.cs" />
     <Compile Include="Areas\Noit\Models\TestDetailsViewModel.cs" />
     <Compile Include="Areas\Noit\Models\TestViewModel.cs" />
     <Compile Include="Areas\Noit\NoitAreaRegistration.cs" />
@@ -237,6 +240,10 @@
     <Content Include="Areas\Noit\Views\Shared\_Question.cshtml" />
     <Content Include="Areas\Noit\Views\_ViewStart.cshtml" />
     <Content Include="Areas\Noit\Views\FullTest\FinishedTest.cshtml" />
+    <Content Include="Areas\Noit\Views\Submit\Index.cshtml" />
+    <Content Include="Areas\Noit\Views\Submit\Submission.cshtml" />
+    <Content Include="Areas\Noit\Views\Moderation\Index.cshtml" />
+    <Content Include="Areas\Noit\Views\Moderation\Submissions.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
