--- a/src/Leaf.Web/Leaf.Web.csproj
+++ b/src/Leaf.Web/Leaf.Web.csproj
@@ -207,11 +207,11 @@
     <Compile Include="Areas\Noit\Controllers\FullTestController.cs" />
     <Compile Include="Areas\Noit\Controllers\ModerationController.cs" />
     <Compile Include="Areas\Noit\Controllers\SubmitController.cs" />
-    <Compile Include="Areas\Noit\Models\NextQuestionViewModel.cs" />
+    <Compile Include="Areas\Noit\Models\FullTest\NextQuestionViewModel.cs" />
     <Compile Include="Areas\Noit\Models\Submit\NewSubmitViewModel.cs" />
     <Compile Include="Areas\Noit\Models\Submit\SubmissionViewModel.cs" />
-    <Compile Include="Areas\Noit\Models\TestDetailsViewModel.cs" />
-    <Compile Include="Areas\Noit\Models\TestViewModel.cs" />
+    <Compile Include="Areas\Noit\Models\FullTest\TestDetailsViewModel.cs" />
+    <Compile Include="Areas\Noit\Models\FullTest\TestViewModel.cs" />
     <Compile Include="Areas\Noit\NoitAreaRegistration.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
