Added state and dates of Submission and implemented assigning them

--- a/src/Leaf.Models/Leaf.Models.csproj
+++ b/src/Leaf.Models/Leaf.Models.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Answer.cs" />
     <Compile Include="AnsweredQuestion.cs" />
     <Compile Include="Category.cs" />
+    <Compile Include="Enums\SubmissionState.cs" />
     <Compile Include="Submission.cs" />
     <Compile Include="SubmissionAnswer.cs" />
     <Compile Include="Test.cs" />
