--- a/src/Leaf.Commom/Leaf.Commom.csproj
+++ b/src/Leaf.Commom/Leaf.Commom.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Constants.cs" />
     <Compile Include="DateTimeProvider.cs" />
     <Compile Include="IDateTimeProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
