--- a/src/Leaf.Tests/Leaf.Tests.csproj
+++ b/src/Leaf.Tests/Leaf.Tests.csproj
@@ -135,6 +135,7 @@
     <Compile Include="Web\Noit\FullTestControllerTests\StartTestTests.cs" />
     <Compile Include="Web\Noit\FullTestControllerTests\TestTests.cs" />
     <Compile Include="Web\Noit\SubmitControllerTests\ConstructorTests.cs" />
+    <Compile Include="Web\Noit\SubmitControllerTests\CreateSubmissionTests.cs" />
     <Compile Include="Web\Noit\SubmitControllerTests\IndexTests.cs" />
     <Compile Include="Web\Noit\SubmitControllerTests\NewTests.cs" />
     <Compile Include="Web\Noit\SubmitControllerTests\SubmissionTests.cs" />
