--- a/src/Leaf.Factories/Leaf.Factories.csproj
+++ b/src/Leaf.Factories/Leaf.Factories.csproj
@@ -43,6 +43,7 @@
     <Compile Include="IQuestionFactory.cs" />
     <Compile Include="ISubmitFactory.cs" />
     <Compile Include="ITestFactory.cs" />
+    <Compile Include="IUserFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
