--- a/src/Leaf.Services/Leaf.Services.csproj
+++ b/src/Leaf.Services/Leaf.Services.csproj
@@ -86,11 +86,13 @@
     <Compile Include="Contracts\IQuestionService.cs" />
     <Compile Include="Contracts\ISubmitService.cs" />
     <Compile Include="Contracts\ITestService.cs" />
+    <Compile Include="Contracts\IUserService.cs" />
     <Compile Include="Noit\FullTestService.cs" />
     <Compile Include="Noit\ModerationService.cs" />
     <Compile Include="Noit\QuestionService.cs" />
     <Compile Include="Noit\SubmitService.cs" />
     <Compile Include="Noit\TestService.cs" />
+    <Compile Include="Noit\UserService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
