Fixed FullTestService Tests

--- a/src/Leaf.Web/Leaf.Web.csproj
+++ b/src/Leaf.Web/Leaf.Web.csproj
@@ -215,6 +215,7 @@
     <Compile Include="Areas\Noit\Controllers\FullTestController.cs" />
     <Compile Include="Areas\Noit\Controllers\ModerationController.cs" />
     <Compile Include="Areas\Noit\Controllers\SubmitController.cs" />
+    <Compile Include="Areas\Noit\Controllers\TrainingController.cs" />
     <Compile Include="Areas\Noit\Models\FullTest\NextQuestionViewModel.cs" />
     <Compile Include="Areas\Noit\Models\Submit\NewSubmitViewModel.cs" />
     <Compile Include="Areas\Noit\Models\Submit\ShortSubmission.cs" />
@@ -238,6 +239,8 @@
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\bootstrap.superhero.css" />
+    <Content Include="Content\bootstrap.superhero.min.css" />
     <Content Include="Content\PagedList.css" />
     <Content Include="Content\questionBox.css" />
     <Content Include="favicon.ico" />
@@ -261,6 +264,7 @@
     <Content Include="Areas\Noit\Views\Moderation\Submission.cshtml" />
     <Content Include="Areas\Noit\Views\Moderation\Question.cshtml" />
     <Content Include="Areas\Noit\Views\Moderation\_ListSubmissionPartial.cshtml" />
+    <Content Include="Areas\Noit\Views\Training\Index.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
