Added tests for models

--- a/src/Leaf.Tests/Leaf.Tests.csproj
+++ b/src/Leaf.Tests/Leaf.Tests.csproj
@@ -47,6 +47,14 @@
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Microsoft.AspNet.Identity.Core, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.Identity.Core.2.2.1\lib\net45\Microsoft.AspNet.Identity.Core.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Microsoft.AspNet.Identity.EntityFramework, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.Identity.EntityFramework.2.2.1\lib\net45\Microsoft.AspNet.Identity.EntityFramework.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Microsoft.Web.Infrastructure, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.Web.Infrastructure.1.0.0.0\lib\net40\Microsoft.Web.Infrastructure.dll</HintPath>
       <Private>True</Private>
@@ -113,7 +121,15 @@
     <Compile Include="Data\RepositoryTests\UpdateTests.cs" />
     <Compile Include="Data\UnitOfWorkTests\CommitTests.cs" />
     <Compile Include="Data\UnitOfWorkTests\ConstructorTests.cs" />
+    <Compile Include="Models\AnsweredQuestionsTests\ConstructorTests.cs" />
     <Compile Include="Models\AnswerTests\PropertiesTests.cs" />
+    <Compile Include="Models\AnsweredQuestionsTests\PropertiesTests.cs" />
+    <Compile Include="Models\CategoryStatisticTests\ConstructorTests.cs" />
+    <Compile Include="Models\CategoryStatisticTests\PropertiesTests.cs" />
+    <Compile Include="Models\CategoryTests\ConstructorTests.cs" />
+    <Compile Include="Models\CategoryTests\PropertiesTests.cs" />
+    <Compile Include="Models\QuestionTests\ConstructorTests.cs" />
+    <Compile Include="Models\QuestionTests\PropertiesTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\Noit\FullTestServiceTests\ConstructorTests.cs" />
     <Compile Include="Services\Noit\FullTestServiceTests\GetNextQuestionTests.cs" />
